<resources>
    <string name="app_name">Frenco</string>

    <string name="home">Home</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_successful">Registration successful</string>
    <string name="email_is_already_taken">Email is Already Taken</string>
    <string name="fill_the_username">Fill the username</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="minimal_8_character">Minimum 8 characters</string>
    <string name="eror_text">Minimum 8 characters</string>
    <string name="confirm_password_eror_text">Password not match</string>
    <string name="input_confirm_password">Input confirm password</string>
    <string name="network_error">Network error</string>
    <string name="username_password_is_incorrect">Username/password is incorrect</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="choose_from">Choose From</string>
    <string name="take_photo">Take photo</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_get_camera">Failed to get camera</string>
    <string name="failed_to_get_image">Failed to get Image</string>
    <string name="detail_photo">Detail Photo</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!-- Language Preferences-->
    <string name="language_idn">Indonesia</string>
    <string name="language_en">English</string>
    <string name="language_def">Default</string>

    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when countdown has finished.</string>
    <string name="notify_channel_name">Habit Reminder</string>
    <string name="notify_content">Time Up!</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="edit_account">Edit Account</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="select_language">Select Language</string>
    <string name="let_s_fill_form_for_your_franchise">Let\'s fill form for your franchise</string>
    <string name="name_franchise">Name Franchise</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="choose_category_franchise">Choose category franchise</string>
    <string name="number_whatsapp">Number whatsapp</string>
    <string name="type_franchise">Type Franchise</string>
    <string name="add_packet">Add Packet</string>
    <string name="image_franchise">Image Franchise</string>
    <string name="add_image">Add Image</string>
    <string name="save">Save</string>
    <string name="type_of_franchise">Type of Franchise</string>
    <string name="facility">Facility</string>
    <string name="price">Price</string>
    <string name="_1">+1</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="no_telephone">No Telephone</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="hi_welcome">Hi! Welcome</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_btn" translatable="false">Login</string>
    <string name="not_have_account">Not have account?</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register_title">REGISTER</string>
    <string name="let_s_join_us">Let\'s join us!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="have_any_account">Have any account?</string>
    <string name="login_here">Login here</string>
    <string name="register_with_google">Register with Google</string>
    <string name="type_">Type :</string>
    <string name="facility_">Facility :</string>
    <string name="price_">Price :</string>
    <string name="share">Share</string>
    <string name="get_link">Get Link</string>
    <string name="edit_franchise_data">Edit Franchise Data</string>
    <string name="delete">Delete</string>
    <string name="select_your_preferred_language">Select your preferred language</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="list_image">List Image</string>
    <string name="no_data">No Data</string>
</resources>