<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addfranchise.AddFranchiseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_top"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="14dp"
                android:textAlignment="center"
                android:text="@string/let_s_fill_form_for_your_franchise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/name_franchise"
                app:endIconMode="clear_text"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="14dp"
                android:hint="@string/address"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/description"
                app:endIconMode="clear_text"
                android:layout_marginTop="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/choose_category"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="14dp"
                android:hint="@string/choose_category_franchise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_desc">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_wa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/number_whatsapp"
                app:prefixText="+62"
                app:endIconMode="clear_text"
                android:layout_marginTop="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tl_wa"
                android:background="@color/black"
                android:layout_marginTop="14dp"/>

            <TextView
                android:id="@+id/tv_sec_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/type_franchise"
                app:layout_constraintStart_toStartOf="@+id/tl_wa"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/tv_sec_type"
                app:layout_constraintTop_toBottomOf="@id/tv_sec_type"
                app:layout_constraintEnd_toEndOf="@id/tl_wa"
                tools:listitem="@layout/item_type_franchise_input"/>

            <Button
                android:id="@+id/btn_add_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/add_packet"
                style="@style/ButtonBackground"
                app:icon="@drawable/baseline_add_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_type" />

            <View
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_type"
                android:layout_marginTop="14dp"/>

            <TextView
                android:id="@+id/tv_sec_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/image_franchise"
                app:layout_constraintBottom_toBottomOf="@+id/btn_add_img"
                app:layout_constraintStart_toStartOf="@+id/tv_sec_type"
                app:layout_constraintTop_toTopOf="@+id/btn_add_img" />

            <Button
                android:id="@+id/btn_add_img"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                app:icon="@drawable/baseline_add_24"
                app:layout_constraintEnd_toEndOf="@+id/tl_wa"
                app:layout_constraintTop_toBottomOf="@+id/line2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_image_franchise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="@id/tv_sec_type"
                app:layout_constraintTop_toBottomOf="@id/btn_add_img"
                app:layout_constraintEnd_toEndOf="@id/tl_wa"
                tools:listitem="@layout/item_image_input"/>



            <Button
                android:id="@+id/btn_upload_data_franchise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_image_franchise"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="7dp"
                style="@style/ButtonBackground"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/overlay_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#88000000"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>
</FrameLayout>