<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.detail.DetailActivity">

            <ImageView
                android:id="@+id/bigImage"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/smallImage1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@id/smallImage2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bigImage"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/smallImage2"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toEndOf="@+id/smallImage1"
                app:layout_constraintTop_toBottomOf="@+id/bigImage"
                app:layout_constraintEnd_toStartOf="@id/smallImage3"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/smallImage3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/smallImage2"
                app:layout_constraintTop_toBottomOf="@+id/bigImage"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/btn_load_more"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/_1"
                android:background="@color/black"
                android:clickable="true"
                android:alpha="0.7"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/smallImage2"
                app:layout_constraintTop_toBottomOf="@+id/bigImage"
                app:layout_constraintBottom_toBottomOf="@id/smallImage3"/>

            <TextView
                android:id="@+id/tv_name_franchises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="7dp"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/smallImage1"
                tools:text="Nama Franchises" />

            <TextView
                android:id="@+id/tv_price_franchises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="7dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_franchises"
                tools:text="Rp10000 - Rp10000" />

            <TextView
                android:id="@+id/tv_type_franchises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="14dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_franchises"
                android:text="@string/type_franchise" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_type_franchise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_type_franchises"
                tools:listitem="@layout/item_type_detail"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:orientation="horizontal"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="14dp"
                android:text="@string/description"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_type_franchise" />

            <TextView
                android:id="@+id/tv_desc_franchises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="7dp"
                tools:text="@tools:sample/lorem[30]"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <Button
                android:id="@+id/btn_wa"
                style="@style/ButtonBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="16dp"
                android:text="@string/whatsapp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_desc_franchises"
                app:layout_constraintStart_toStartOf="@+id/tv_desc_franchises"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_franchises" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="Detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Loading progress bar -->
    <FrameLayout
        android:id="@+id/overlay_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#88000000"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>